3.9.2/_sources/gallery/ticks/date_demo_rrule.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/ticks/date_demo_rrule.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. meta::
        :keywords: codex

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_ticks_date_demo_rrule.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_ticks_date_demo_rrule.py:


=========================================
Placing date ticks using recurrence rules
=========================================

The `iCalender RFC`_ specifies *recurrence rules* (rrules), that define
date sequences. You can use rrules in Matplotlib to place date ticks.

This example sets custom date ticks on every 5th easter.

See https://dateutil.readthedocs.io/en/stable/rrule.html for help with rrules.

.. _iCalender RFC: https://tools.ietf.org/html/rfc5545

.. GENERATED FROM PYTHON SOURCE LINES 15-46



.. image-sg:: /gallery/ticks/images/sphx_glr_date_demo_rrule_001.png
   :alt: date demo rrule
   :srcset: /gallery/ticks/images/sphx_glr_date_demo_rrule_001.png, /gallery/ticks/images/sphx_glr_date_demo_rrule_001_2_00x.png 2.00x
   :class: sphx-glr-single-img





.. code-block:: Python

    import datetime

    import matplotlib.pyplot as plt
    import numpy as np

    from matplotlib.dates import (YEARLY, DateFormatter, RRuleLocator, drange,
                                  rrulewrapper)

    # Fixing random state for reproducibility
    np.random.seed(19680801)


    # tick every 5th easter
    rule = rrulewrapper(YEARLY, byeaster=1, interval=5)
    loc = RRuleLocator(rule)
    formatter = DateFormatter('%m/%d/%y')
    date1 = datetime.date(1952, 1, 1)
    date2 = datetime.date(2004, 4, 12)
    delta = datetime.timedelta(days=100)

    dates = drange(date1, date2, delta)
    s = np.random.rand(len(dates))  # make up some random y values


    fig, ax = plt.subplots()
    plt.plot(dates, s, 'o')
    ax.xaxis.set_major_locator(loc)
    ax.xaxis.set_major_formatter(formatter)
    ax.xaxis.set_tick_params(rotation=30, labelsize=10)

    plt.show()


.. _sphx_glr_download_gallery_ticks_date_demo_rrule.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: date_demo_rrule.ipynb <date_demo_rrule.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: date_demo_rrule.py <date_demo_rrule.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: date_demo_rrule.zip <date_demo_rrule.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
